# near-lisp

./: .gitignore  AUDIT.md  Cargo.toml  GAS_OPTIMIZATION.md  Makefile  README.md  TEST_COVERAGE_AUDIT.md  TEST_RESULTS.md
.agents/skills/near-lisp/: SKILL.md
.agents/skills/near-lisp/references/: GAS_REFERENCE.md  IMPLEMENTATION_NOTES.md
.cargo/: config.toml
.github/workflows/: test.yml
examples/: 01-basics.lisp  02-variables.lisp  03-conditionals.lisp  04-lambdas.lisp  05-lists.lisp  06-recursion.lisp  07-pattern-matching.lisp  08-error-handling.lisp  09-stdlib-math.lisp  10-stdlib-string.lisp  11-stdlib-crypto.lisp  12-near-context.lisp  13-modules.lisp  14-policies.lisp  15-progn.lisp  16-cross-contract.lisp  17-type-conversions.lisp  18-gas.lisp  19-real-world.lisp  README.md  bench_loop.rs  env_bench.rs
scripts/: find_gas_limits.py  gas_extreme.py  gas_high_n.py  gas_measure.py  gas_min_measure.py  gas_scale_test.py  test_batch_n.py  test_batch_v2.py  test_ccall.py  test_scaling.py  test_yield_boundary.py  testnet_smoke.py
src/: bytecode.rs  contract.rs  eval.rs  helpers.rs  lib.rs  parser.rs  types.rs  vm.rs
tests/: bench_gas.rs  bench_gas_sandbox.rs  bench_max_loop.rs  bench_micro.rs  fuzz_test.rs  lisp_coverage.rs  lisp_dcl_fork.rs  lisp_dcl_sandbox.rs  lisp_execute.rs  lisp_features.rs  lisp_floats.rs  lisp_full_e2e.rs  lisp_fuzz.rs  lisp_json_api.rs  lisp_json_edges.rs  lisp_json_uncovered.rs  lisp_rebalance.rs  lisp_sandbox.rs  lisp_security.rs  lisp_testnet.rs  lisp_unit.rs  test_examples.rs  test_loop_recur.rs
(+1 files in other folders)
