[package]
name = "near-lisp"
version = "0.1.0"
edition = "2021"
description = "On-chain Lisp interpreter for NEAR Protocol — policies, rules, and eval on-chain"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.6.0", features = ["legacy", "unit-testing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
near-workspaces = "0.22"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
