[package]
name = "near-lisp"
version = "0.2.0"
edition = "2021"
description = "On-chain Lisp interpreter for NEAR Protocol — policies, rules, eval on-chain, yield/resume + cross-contract calls"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[dependencies]
near-sdk = { version = "5.6.0", features = ["legacy", "unit-testing", "unstable"] }
borsh = { version = "1.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
near-workspaces = "0.21"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
